<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/backgroundDark" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip">
            <LinearLayout android:orientation="vertical" android:background="@drawable/bg_stat_card" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginEnd="6.0dip">
                <TextView android:textSize="10.0sp" android:textColor="@color/textSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_sms" android:textAllCaps="true" />
                <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/accentCyan" android:id="@id/analyticsTotalCount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/bg_stat_card" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="6.0dip">
                <TextView android:textSize="10.0sp" android:textColor="@color/textSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/this_week" android:textAllCaps="true" />
                <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/statusSuccess" android:id="@id/analyticsWeekCount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
            <LinearLayout android:orientation="vertical" android:background="@drawable/bg_stat_card" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginEnd="6.0dip">
                <TextView android:textSize="10.0sp" android:textColor="@color/textSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/telegram_success" android:textAllCaps="true" />
                <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/accentElectric" android:id="@id/analyticsTelegramCount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/bg_stat_card" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="6.0dip">
                <TextView android:textSize="10.0sp" android:textColor="@color/textSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/success_rate" android:textAllCaps="true" />
                <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/statusWarning" android:id="@id/analyticsSuccessRate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0%" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/textPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/per_app_breakdown" />
        <androidx.recyclerview.widget.RecyclerView android:id="@id/appStatsRecyclerView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:nestedScrollingEnabled="false" />
        <TextView android:textSize="14.0sp" android:textColor="@color/textHint" android:gravity="center" android:id="@id/noAppStatsText" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_data" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/textPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/top_numbers" />
        <androidx.recyclerview.widget.RecyclerView android:id="@id/topNumbersRecyclerView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:nestedScrollingEnabled="false" />
        <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/exportCsvButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/export_csv" />
    </LinearLayout>
</ScrollView>